2013-02-18  Balazs Kilvady  <kilvadyb@homejinni.com>

        MIPS DFG implementation.
        https://bugs.webkit.org/show_bug.cgi?id=101328

        Reviewed by Oliver Hunt.

        DFG implementation for MIPS.

        * wtf/Platform.h:

2013-02-18  Zan Dobersek  <zdobersek@igalia.com>

        Stop placing std::isfinite and std::signbit inside the global scope
        https://bugs.webkit.org/show_bug.cgi?id=109817

        Reviewed by Darin Adler.

        Prefix calls to the isfinite and signbit methods with std:: as the two
        methods are no longer being imported into the global scope.

        On Solaris and OpenBSD platforms or when using Visual C++ the two methods
        are now defined (as incompatibility workarounds) inside the std namespace.

        * wtf/DateMath.cpp:
        (WTF::timeClip):
        * wtf/DecimalNumber.h:
        (WTF::DecimalNumber::DecimalNumber):
        * wtf/MathExtras.h:
        (std):
        (std::isfinite):
        (std::signbit):
        (lrint):
        (wtf_pow):
        (decomposeDouble):
        * wtf/MediaTime.cpp:
        (WTF::MediaTime::createWithFloat):
        (WTF::MediaTime::createWithDouble):
        * wtf/dtoa.cpp:
        (WTF::dtoa):

2013-02-18  Laszlo Gombos  <l.gombos@samsung.com>

        Move ENABLE macros for WebCore out from Platform.h
        https://bugs.webkit.org/show_bug.cgi?id=105735

        Reviewed by Darin Adler and Benjamin Poulain.

        Introduce FeatureDefines.h by combining the existing rules from
        Platform.h and adding new rules for all the ENABLE flags that are
        listed in the FeatureFlags wiki.

        The new rules are not used at the moment by any ports
        as the port specific build systems already define these flags
        so the !defined() guard will prevent redefinition of the macros.

        * GNUmakefile.list.am: Add FeatureDefines.h.
        * WTF.gypi: Ditto.
        * WTF.pro: Ditto.
        * WTF.vcproj/WTF.vcproj: Ditto.